Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ h1, h2 {
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 1rem;
-    width: 100%;
+    width: 90%;
 }
 .pause-button {
     background-color: #444;
